--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
-def setVersionName = { ->
-    if (project.hasProperty("androidVersionName")) {
-        println("Replacing versionName with supplied build parameter: " +
-                "$androidVersionName")
-        return androidVersionName
-    } else {
-        return "1.0"
-    }
-}
-
 android {
     compileSdkVersion 33
     defaultConfig {
@@ -20,17 +10,37 @@ android {
         // AR Required apps must declare minSdkVersion >= 24.
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 1
-        versionName setVersionName()
+        def majorVersionCode = 0
+        def minorVersionCode = 1
+        versionCode majorVersionCode * 100000 + minorVersionCode * 1000 + generateVersionCode()
+        versionName "$majorVersionCode.$minorVersionCode.${generateVersionCode()}"
+        setProperty("archivesBaseName", "Arwalls" + "-v" + versionName)
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    signingConfigs {
+        release {
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+            storeFile file(properties.getProperty('storeFile'))
+            storePassword properties.getProperty('storePassword')
+            keyAlias properties.getProperty('keyAlias')
+            keyPassword properties.getProperty('keyPassword')
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
         }
     }
     buildFeatures {
@@ -51,4 +61,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
+}
+
+static def generateVersionCode() {
+    return "git rev-list HEAD --count".execute().text.trim().toInteger()
 }
