--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         applicationId "ru.ssau.arwalls"
 
@@ -46,6 +46,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'ru.ssau.arwalls.rawdepth'
 }
 
 dependencies {
