--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -14,8 +14,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.ssau.arwalls.rawdepth">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <application android:icon="@drawable/ic_launcher">
     <meta-data
         android:name="com.google.ar.core.disable_security_check"
