upgraded agp to 7.4.2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="ru.ssau.arwalls.rawdepth">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.CAMERA"/>
   <!-- This tag indicates that this application requires ARCore.  This results in the application
@@ -31,7 +29,7 @@
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="false"
       android:largeHeap="true"
-      tools:ignore="GoogleAppIndexingWarning">
+      android:dataExtractionRules="@xml/data_extraction_rules">
 
     <activity
         android:name="ru.ssau.arwalls.rawdepth.MainActivity"
