--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ org.gradle.jvmargs=-Xmx4608m
 # Enables Android X.
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
